# yc-architect-solution-library

./: .gitignore  .gitmodules  README.md
demos/2021-02-Kubernetes Security/: README.md
demos/2021-02-Kubernetes-Security/: .gitignore
demos/ALB ingress controller/: READme.md  demo-app-1.yaml  demo-app-2.yaml  ingress.yaml
demos/Cilium&Hubble/: READme.md  sw_l3_l4_l7_policy.yaml  sw_l3_l4_policy.yaml
demos/airflow-DataProc+ETL/: DataProcProcessing.py  DataProcessing.py  ETLOrchestration.py  README.md  etl_function.sql  pxf_tables.sql
demos/application-sets/: .gitignore  README.md
demos/bq-export/: .boto  README.md  main.py
demos/dmz-fw-ha/: .gitignore  README.md  compute.tf  firewall.tf  folders.tf  load-balancer.tf  network.tf  output.tf  provider.tf  route-switcher.tf  security.tf  terraform.tfvars  variables.tf
demos/failure-testing/: .gitlab-ci.yml  README.md
demos/gitops-argo-crossplane/: README.md
demos/gitops-dynamic-envs/: README.md
demos/k8s-logs-2-clickhouse/: Chart.yaml  README.md  schema.json  values.yaml  values.yaml.bak
demos/yc-infra-management/: README.md
demos/yc-k8s-autoscaling/: README.md  k8s_autoscale-CPU.yaml  k8s_autoscale-RPS.yaml  main.tf  outputs.tf  values-ingr.yaml  values-prom-ad.yaml  values-prom.yaml
devsecops-compliance/devsecops-compliance/: README.md
drawio-terraform/: README.md  compute.tf  drawio.tf  env-yc.sh  install.sh  providers.tf  variables.tf  vm-drawio.tpl
security-solution-library/unmng-waf-ptaf-cluster/: README.md
time-slicing-gpu-k8s/: README.md  nvidia-plugin-test.yml  time-slicing-config.yaml
yc-ai/: Dockerfile  README.md  docker-compose.yml  yc-ai-adoption-pack.sln
yc-ai/yc-ai-web-ui/: Dockerfile  Dockerfile.original  Program.cs  Startup.cs  appsettings.json  yc-ai-web-ui.csproj
yc-ai/yc-scale-2022/: AsrProcessor.cs  Dockerfile  MlProcessor.cs  Program.cs  Startup.cs  TrackerProcessor.cs  WeatherForecast.cs  appsettings.json  docker-compose.yml  yc-scale-2022.csproj
yc-ai/yc-speechkit-batch-asr/: Dockerfile  README.md  S3Client.cs  SkBatchAsrClient.cs  SkBatchAsrClient.csproj  SkBatchAsrClient.sln  SkRecognitionClient.cs  SkTaskModel.cs  SkTasksDb.cs  yc-speechkit-batch-asr.csproj
yc-ai/yc-speechkit-cli/: CMakeLists.txt  yc-speechkit-cli.cpp  yc-speechkit-cli.h
yc-ai/yc-speechkit-hybrid/: AudioDataEventArgs.cs  Client.cs  FileStreamReader.cs  Helpers.cs  README.md  SpeechKitClient.cs  appsettings.json  yc-speechkit-hybrid.csproj
yc-ai/yc-speechkit-streaming-asr/: .gitignore  .gitmodules  AudioDataEventArgs.cs  Client.cs  (+6 more)
yc-ai/yc-speechkit-transcoder/src/: CMakeLists.txt  CMakeSettings.json  client.cpp  client.h  config.h  config.txt  speechkit_asr_svc.cpp  speechkit_asr_svc.h  transcoder-client.cpp  transcoder-client.h  transcoder-config.h
yc-ai/yc-speechkit-transcoder/src/audio-prep-svc/: audio_prep_svc.cpp  audio_prep_svc.h  discoverer.cpp  discoverer.h  uri.h
yc-ai/yc-speechkit-transcoder/src/cmake/: FindGStreamer.cmake
yc-ai/yc-speechkit-transcoder/src/google/api/: annotations.pb.cc  annotations.pb.h  http.pb.cc  http.pb.h
yc-ai/yc-speechkit-transcoder/src/google/rpc/: code.pb.cc  code.pb.h  error_details.pb.cc  error_details.pb.h  status.pb.cc  status.pb.h
yc-ai/yc-speechkit-transcoder/src/google/type/: dayofweek.pb.cc  dayofweek.pb.h  timeofday.pb.cc  timeofday.pb.h
yc-ai/yc-speechkit-transcoder/src/yandex/cloud/: validation.pb.cc  validation.pb.h
yc-ai/yc-speechkit-transcoder/src/yandex/cloud/ai/stt/v2/: stt_service.grpc.pb.cc  stt_service.grpc.pb.h  stt_service.pb.cc  stt_service.pb.h
yc-ai/yc-speechkit-transcoder/src/yandex/cloud/api/: operation.pb.cc  operation.pb.h
yc-ai/yc-speechkit-transcoder/src/yandex/cloud/operation/: operation.pb.cc  operation.pb.h  operation_service.grpc.pb.cc  operation_service.grpc.pb.h  operation_service.pb.cc  operation_service.pb.h
yc-coredns/: .gitignore  README.md  compute.tf  outputs.tf  providers.tf  variables.tf
yc-datalens/: geocoder.ipynb
yc-dns-redundancy/: README.md  compute.tf  env-yc-prod.sh  outputs.tf  providers.tf  variables.tf  vpc.tf
yc-gitlab-runner-docker-machine/: .gitignore  README.md  locals.tf  lockbox.tf  main.tf  network.tf  outputs.tf  provider.tf  security-groups.tf  variables.tf
yc-ha-regional-glusterfs/: .gitignore  Makefile  README.md  README_high_bw.md  client.tf  disks.tf  env-yc-prod.sh  metadata.tf  net.tf  outputs.tf  storage.tf  terraformrc  variables.tf  versions.tf
yc-juicefs/: .env.example  .gitignore  Makefile  README.md  client.tf  env-yc-prod.sh  net.tf  redis.tf  s3.tf  sa.tf  variable.tf  yield.tf
yc-k8s-autoscaling/: .gitignore  README.md  k8s_autoscale-CPU.yaml  k8s_autoscale-RPS.yaml  main.tf  outputs.tf  variables.tf  versions.tf
yc-k8s-capture-nodes-logs/: README.md  capture_nodes_logs.sh
yc-k8s-certificate-updater/: README.md  certificate-updater-ds.yaml  certificate-updater-ns.yaml
yc-k8s-gateway-api/: README.md  dev-app.yaml  dev-gw.yaml  dev-route.yaml  prod-app.yaml  prod-gw.yaml  prod-route.yaml
yc-k8s-ingress-class/: README.md  alb-ingress-class.yaml
yc-k8s-unifiedagent-sidecar/: README.EN.md  README.md
yc-kubelet-flag-editor/: README.md  kubelet-flag-editor-configmap.yaml  kubelet-flag-editor-ds.yaml  kubelet-flag-editor-ns.yaml
yc-mdb-dns-peering/: Readme.md
yc-mdb-pg-ro-user/: README.md  db1.pg_dump  locals.tf  main.tf  network.tf  outputs.tf  terraform.tf  variables.tf
yc-nrd-raid/: README.md  compute.tf  env-yc-prod.sh  outputs.tf  providers.tf  variables.tf
yc-priv_registry-cert/: Dockerfile  README.md  cronjob.yaml  interactive.sh  job.yaml  playbook.yaml  worker.sh
yc-route-switcher-v2/: README.md  output.tf  variables.tf
yc-s3-private-endpoint/: README.md  bucket.tf  compute.tf  load-balancer.tf  network.tf  output.tf  provider.tf  security.tf  terraform.tfvars  variables.tf
yc-snap-backup-tool/: README.md  main.tf  outputs.tf  terraform.example  variables.tf
yc-terraform-modules/: READme.md
yc-terraform_via_gitlab/: .gitlab-ci.yml  .terraformrc  Dockerfile  README.md  gitlab-terraform.sh  main.tf  network.tf  variables.tf
(+762 files in other folders)
